statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db240
spec:
  serviceName: "db-service"
  replicas: 3
  selector:
    matchLabels:
      app: db
  template:
    metadata: 
      labels:
        app: db
    spec:
      containers: 
        - name: db-cont
          image: ashraysambu/k8s2:dbimg
          ports:
            - containerPort: 3306
          
          envfrom:
            - secretRef:
                name: app-secret
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          volumeMounts:
            - name: db-storage
              mountPath: /usr/share/nginx/html/
    
    volumeClaimTemplates:
          - metadata:
              name: db-storage
              StorageClassName: gp2
            spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                requests:
                  storage: 2Gi
