app-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: dee
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
